<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/namHeaderBackground"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        style="@style/UserPictureCardViewHolder">
        <ImageView
            android:id="@+id/ivUserPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/ic_user"
            style="@style/UserPictureViewHolder"/>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/NavHeaderInfo">

        <TextView
            android:id="@+id/tvUserNameHeader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginBottom="2dp"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primaryIcon"/>

        <TextView
            android:id="@+id/tvUserJIDHeader"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/primaryIcon"/>
    </LinearLayout>

</LinearLayout>